--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -8,7 +8,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    transition: all .3s ease;
+    // transition: all .3s ease;
 
     color: var(--color-text-primary);
     // mix-blend-mode: difference;
@@ -289,6 +289,7 @@ body ul.header__burger__links {
         width: 100%;
         max-width: 100% !important;
         margin-top: 0;
+
         a {
             // transform: translateY(-100%);
             border-bottom: 0;
@@ -360,7 +361,7 @@ body ul.header__burger__links {
     position: relative;
     transform: translateY(10px);
     background: var(--color-burger-icon);
-    transition: all 0ms 200ms;
+    // transition: all 0ms 200ms;
 }
 
 .bar.animate {
