--- a/components/search/search.scss
+++ b/components/search/search.scss
@@ -40,11 +40,16 @@
     background-color: transparent;
     font-weight: 600;
     text-transform: uppercase;
-    font-size: var(--font-size-0);
+    font-size: 16px; // Prevent auto-zoom on iOS on focus (MUST be 16px or larger)
     color: var(--color-search-input);
     padding-left: 0;
     padding-right: 0;
-    font-size: 16px; // Prevent auto-zoom on iOS on focus
+    
+    // iOS specific fixes
+    -webkit-appearance: none;
+    -webkit-user-select: text;
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
 
     &::placeholder {
         color: var(--color-search-input-placeholder);
@@ -54,6 +59,7 @@
     &:focus {
         outline: none;
         caret-color: var(--color-search-input);
+        -webkit-text-fill-color: var(--color-search-input);
     }
 
     // Ensure input is clickable and focusable
