--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -98,7 +98,7 @@
     padding-right: var(--padding);
     margin-left: var(--margin-width-50);
     margin-bottom: 9rem;
-
+    margin-top: 1rem;
     display: flex;
     gap: .6rem;
     flex-wrap: wrap;
